// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariationViewer component renders on data, no other entry at the same position 1`] = `
<DocumentFragment>
  none
</DocumentFragment>
`;

exports[`VariationViewer component renders on data, other than current entry 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/O00560/entry"
      >
        O00560
      </a>
       (
      <a
        class="external-link"
        href="https://www.ensembl.org/9606/Location/View?r=8:58565034-58581737"
        rel="noopener"
        target="_blank"
      >
        8:58,565,034-58,581,737
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      , 
      <a
        class="external-link"
        href="https://www.ensembl.org/9606/Location/View?r=8:58565034-58581737"
        rel="noopener"
        target="_blank"
      >
        8:58,565,034-58,581,737
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      )
    </li>
  </ul>
</DocumentFragment>
`;

exports[`VariationViewer component renders on error 1`] = `
<DocumentFragment>
  <em>
    An error happened
  </em>
</DocumentFragment>
`;

exports[`VariationViewer component renders on loading 1`] = `
<DocumentFragment>
  <test-file-stub
    height="1em"
    width="1em"
  />
</DocumentFragment>
`;

exports[`VariationViewer component renders on no data 1`] = `
<DocumentFragment>
  none
</DocumentFragment>
`;
